FindBugs fixes for backup/restore impl.
svn path=/trunk/; revision=45982


Former-commit-id: 8099c5a90a716bd88b800d0e54cf11eb782af725